--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,13 +5,28 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "demo",
+            "name": "demo:dev",
             "type": "python",
             "request": "launch",
             "module": "flask",
             "env": {
                 "FLASK_APP": "manage:app",
                 "FLASK_ENV": "development"
+            },
+            "args": [
+                "run",
+                "--no-debugger"
+            ],
+            "jinja": true
+        },
+        {
+            "name": "demo:prod",
+            "type": "python",
+            "request": "launch",
+            "module": "flask",
+            "env": {
+                "FLASK_APP": "manage:app",
+                "FLASK_ENV": "production"
             },
             "args": [
                 "run",
